--- a/frontend/style.css
+++ b/frontend/style.css
@@ -10,17 +10,43 @@ body {
     flex-direction: column;
 }
 
+.header {
+    padding: 16px 16px 32px;
+}
+
+
 .container {
     display: flex;
     width: 100%;
     justify-content: space-around;
 }
 
+.canvas-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.options {
+    display: flex;
+    height: 400px;
+    flex-direction: column;
+    justify-content: center;
+    gap: 40px;
+}
+
+button {
+    width: 100px;
+    height: 40px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+}
+
 .canvas {
     display: flex;
     width: 400px;
     height: 400px;
-    box-sizing: border-box;
     border: 1px solid black;
     flex-wrap: wrap;
 }
