--- a/frontend/style.css
+++ b/frontend/style.css
@@ -104,7 +104,8 @@ button:active {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: 0;
+    pointer-events: none;
 }
 
 .hidden-layer {
